[package]
name = "iwindows"
version = "0.1.0"
edition = "2021"

[lib]
name = "iwindows"
path = "src/lib.rs"

[[bin]]
name = "iwin_test"
path = "bin/app.rs"

[dependencies]

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]

[dependencies.windows]
version = "0.36.1"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]